# sensor_core

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
example/: my_config_object_defs.py  my_fleet_config.py  my_processor_example.py  my_sensor_example.py  run_sensor_core.ipynb  run_sensor_core.py  system.cfg
scripts/: bcli  rpi_installer.sh  run_sensor_core.sh
src/etl/: utils.py  viewer.ipynb
src/example/: my_config_object_defs.py  my_device_types.py  my_fleet_config.py  my_processor_example.py  my_sensor_example.py  run_my_sensor.py  run_sensor_core.ipynb  run_sensor_core.py  system.cfg
src/sensor_core/: __init__.py  api.py  bcli.py  cloud_connector.py  config_objects.py  config_validator.py  configuration.py  data_processor.py  datastream.py  device_config_object_defs.py  device_config_objects.py  device_health.py  device_manager.py  dp.py  dp_config_object_defs.py  dp_config_objects.py  dp_engine.py  dp_node.py  dp_tree.py  dp_tree_node.py  dp_tree_node_types.py  dp_worker_thread.py  edge_orchestrator.py  etl.py  etl.py.old  file_naming.py  push_to_cloud.py  self_tracker.py  sensor.py  sensor_core.py  stats_tracker.py  system_datastreams.py
src/sensor_core/scripts/: bcli  network_test.sh  rpi_installer.sh  run_sensor_core.sh
src/sensor_core/sensors/: config_object_defs.py  device_recipes.py  processor_audio_hive.py  processor_video_aruco.py  processor_video_trap_cam.py  sensor_aht20.py  sensor_audio.py  sensor_ltr390.py  sensor_rpicam_vid.py  sensor_sht31.py  sensor_video.py
src/sensor_core/sensors/drivers/: aht20.py  crc8_helper.py  ltr390.py
src/sensor_core/utils/: audio_transforms.py  cloud_journal.py  dc.py  file_naming.py  git_helper.py  journal.py  journal_pool.py  sc_test_emulator.py  update_my_code.py  utils.py  utils_clean.py
test/core/: bcli_test.py  cloud_journal_test.py  configuration_test.py  device_manager_test.py  file_naming_test.py  journal_test.py  orchetstrator_test.py  sc_emulator_test.py  sensor_core_standalone.py  sensor_core_test.py  sensor_test.py  test_cloud_connector.py  test_dp_tree.py  utils_test.py
test/sensors/: __init__.py  example_device_test.py  processor_video_aruco_test.py  sensor_audio_test.py  sht31_device_test.py  trap_cam_device_test.py
